# WeekendsWay

./: .gitignore.txt  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  README.md
qml/: Main.qml  qml.qrc
qml/components/: BigActionButton.qml  EditItemDialog.qml  ReturnButton.qml  Toast.qml
qml/pages/: EatPage.qml  FriendsPage.qml  HomePage.qml  MainPage.qml
qml/utils/: StorageHelpers.js
src/: Navigator.cpp  Navigator.h  Storage.cpp  Storage.h  main.cpp
